fixed a bug with popup scrolling on mobile devices

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -129,21 +129,6 @@ header.navbar {
   }
 }
 
-.mfp-zoomIn.mfp-ready.mfp-bg {
-  opacity: 0.7;
-}
-
-.popup-full {
-  margin: 0 auto;
-  max-width: 98%;
-  @media (min-width: 768px) {
-    width: 94%;
-  }
-  @media (min-width: 992px) {
-    width: 90%;
-  }
-}
-
 .btn-light {
   color: #747474;
   background-color: #e8e8e8;
